# Ainz-rs

./: Cargo.toml  README.md
src/: main.rs
src/ainz/: ainz.rs  mod.rs
src/config/: config.rs
